--- a/static/configuration.html
+++ b/static/configuration.html
@@ -10,16 +10,17 @@
     <link rel="icon" href="favicon.ico">
     <link rel="canonical" href="https://getbootstrap.com/docs/3.4/examples/starter-template/">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>YDL - Enter path manually</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="https://getbootstrap.com/docs/3.4/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <!-- <link href="https://getbootstrap.com/docs/3.4/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="ie10-viewport-bug-workaround.css" rel="stylesheet"> 
 
     <!-- Custom styles for this template -->
-    <link href="starter-template.css" rel="stylesheet" type="text/css">
+    <link href="css/starter-template.css" rel="stylesheet" type="text/css">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -30,7 +31,8 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <style>
+  
+  <!--<style>
       body {
   padding-top: 50px;
 }
@@ -38,6 +40,7 @@
   padding: 40px 15px;
   text-align: center;
 }      </style>
+-->
   </head>
 
   <body>
@@ -51,12 +54,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Project YDL</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="/login">Home</a></li>
+            <li class="active"><a href="#">Configuration</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -67,19 +70,14 @@
 
       <div class="starter-template">
         <p class="lead">
-            <form action="/login" method="post">
-                <h2>Youtube URL: <input name="URL" type="text" />
-                <br><br>
-                <h3><label for="downloadoption">Option: </label>
-                    <select name="downloadoption" id="downloadoption">
-                    <option value="mp3">Solo Audio</option>
-                    <option value="mp4">Audio+Video</option>
-                </select></h3>
-                <input value="Download" type="submit" />
+            <form action="/config" method="post">
+                  <input type="text" name="new_path" />
+                  <input value="save" type="submit" />
             </form>
-        </h2>
+            
+          </p>
       </div>
-
+     
     </div><!-- /.container -->
 
 
