--- a/static/configuration.html
+++ b/static/configuration.html
@@ -59,7 +59,8 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/login">Home</a></li>
-            <li class="active"><a href="#">Configuration</a></li>
+            <li><a href="/spotify">Spotify</a></li>
+            <li class="active"><a href="/config">Configuration</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
