--- a/static/spotify.html
+++ b/static/spotify.html
@@ -49,7 +49,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
+            <li><a href="/login">Home</a></li>
             <li class="active"><a href="/spotify">Spotify</a></li>
             <li><a href="/config">Configuration</a></li>
             <li><a href="#">Contact</a></li>
