--- a/static/configuration.html
+++ b/static/configuration.html
@@ -58,7 +58,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/login">Home</a></li>
+            <li><a href="/">Main</a></li>
+            <li><a href="/youtube">Youtube</a></li>
             <li><a href="/spotify">Spotify</a></li>
             <li class="active"><a href="/config">Configuration</a></li>
             <li><a href="#">Contact</a></li>
@@ -75,7 +76,7 @@
                   <input type="text" name="new_path" />
                   <input value="save" type="submit" />
             </form>
-            
+            <h3>Directorio configuracion: {{path}}</h3>
           </p>
       </div>
      
